<resources>
    <string name="app_name">HytenC Patient</string>
    <string name="appDetail">Solution for controlling and monitoring Hypertension</string>
    <string name="welcomeTo">Welcome To</string>
    <string name="login">Login</string>
    <string name="loginAsPatient">Login as patient</string>
    <string name="appDescription">Hyper-C is an application for monitoring or controlling hypertension patients which is handled directly by a doctor</string>
    <string name="welcomeBack">Welcome Back</string>
    <string name="email">Email</string>
    <string name="fullName">Full Name</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="dontHaveAccount">Don\'t have an account? Sign Up</string>
    <string name="alreadyHaveAccount">Already have an account? Login</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_schedule">Jadwal</string>
    <string name="title_settings">Settings</string>
    <string name="title_tips">Tips</string>
    <string name="title_medical_record">Rekam Medis</string>
    <string name="hello">Hello,</string>
    <string name="usernameDummy">Barry Allen</string>
    <string name="useremailDummy">barryallen@starlabs.com</string>
    <string name="text_havenot_take_medicin">Kamu belum minum obat, \nminum obat dulu lalu beritahu pengawas</string>
    <string name="text_havenot_take_medicin2">Kamu belum minum obat, minum obat dulu lalu beritahu pengawas</string>
    <string name="text_have_take_medicin">Yeay! \nkamu sudah minum obat, \njangan lupa minum obat selanjutnya yaa.</string>
    <string name="text_state_init">Tetap semangat ya! \njalani gaya hidup sehat. measures your blood pressure, control it, and live longer</string>
    <string name="text_tell_doctor">Sudah</string>
    <string name="text_daily_review">Tips</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="activate_notification">Aktifkan Notifikasi</string>
    <string name="notity_when_the_time">dapatkan notifikasi jika sudah jadwalnya minum obat</string>
</resources>